force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Budget</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>